--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -31,6 +31,7 @@
             android:layout_marginEnd="32dp"
             android:text="TextView"
             android:textSize="36sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView2"
             app:layout_constraintTop_toTopOf="parent" />
@@ -68,6 +69,7 @@
             android:layout_marginStart="100dp"
             android:layout_marginTop="60dp"
             android:layout_marginEnd="100dp"
+            android:background="@drawable/borda_botao"
             android:text="Button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
